# CDP4_NRP

./: .gitignore  .gitmodules  README.md  cdp4_loop.py  install.sh
Experiments/cdp4_data_collection_experiment/: ExDSceneUnderstandingICub.ini  bibi_configuration.bibi  cdp4_loop.py  cdp4_loop_random_gaussian.py  cdp4_loop_random_uniform.py  experiment_configuration.exc  initialize_icub.py  install.sh  readme.md  saccade_generator.launch  virtual_room_tracking_icub.sdf
Experiments/cdp4_data_collection_experiment/resources/gazebo_ros_logical_camera_package/: CMakeLists.txt
Experiments/cdp4_data_collection_experiment/resources/gazebo_ros_logical_camera_package/include/: ROSLogicalCameraPlugin.hh
Experiments/cdp4_loop_experiment/: bibi_configuration.bibi  cdp4_data_collection.py  cdp4_loop.py  (+8 more)
cdp4_icub/: bibi_configuration.bibi  cdp4_data_collection.py  empty_world.sdf  experiment_configuration.exc
scene_understanding_icub_holodeck_0/: .cdp4_data_collection.py.swp  ExDSceneUnderstandingICub.ini  ExDSceneUnderstandingICub.uis  all_neurons_monitor.py  bibi_configuration.bibi  braitenberg.py  cdp4_data_collection.py  experiment_configuration.exc  eye_sensor_transmit.py  filter_joints_for_nice_output_on_frontend.py  move_target.py  run_experiment.py  set_eyepos.py  tf_results.py  virtual_room_tracking_icub.sdf
scene_understanding_icub_holodeck_0_1/: .cdp4_data_collection.py.swo  .run_experiment.py.swo  ExDSceneUnderstandingICub.uis  cdp4_data_collection.py  experiment_configuration.exc  iba.launch  model.py  readME.md  room_objects  room_objectsdd  ros_services.txt  run_experiment.py
spiking_saccade_generator/: README.md  environment.yml  saccade_generator.py  saccade_generator_single_side.py
template_icub/: bibi_configuration.bibi  experiment_configuration.exc  idle_brain.py
(+88 files in other folders)
